refactor: replace records with classes for message and tool definitions